# simple_llama

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  main.rs
src/hook_llm/: mod.rs
src/llm/: gemma.rs  llama3.rs  mod.rs  qwen.rs
src/script_llm/: mod.rs
src/script_runtime/: mod.rs
static/: prompt.example.toml
