[package]
name = "simple_llama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
encoding_rs = "0.8.34"
serde = { version = "1.0", features = ["derive"] }
llama-cpp-2 = { version = "0.1.62", features = ["dynamic_link"] }

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
serde_json = "1.0"
toml = "0.8.14"
