[package]
name = "simple_llama"
version = "0.1.3-a"
edition = "2021"
authors = ["csh <458761603@qq.com>"]
description = "A crate for run llama.cpp in Rust. based on llama-cpp-2"
repository = "https://github.com/L-jasmine/simple_llama"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
encoding_rs = "0.8.34"
serde = { version = "1.0", features = ["derive"] }
llama-cpp-2 = { version = "0.1.62", features = ["dynamic_link"] }
log = "0.4"

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
serde_json = "1.0"
toml = "0.8.14"
